samples/_failures_safe/1761636401_ddaacf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06e69e32.c: In function ‘main’:
./samples/SAFE/__tmp_06e69e32.c:163:10: error: expected ‘;’ at end of input
  163 |     input
      |          ^
      |          ;
./samples/SAFE/__tmp_06e69e32.c:163:5: error: expected declaration or statement at end of input
  163 |     input
      |     ^~~~~
